--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
   				<!-- fin indicadores -->
 				<div class="carousel-item destacados-single active">
 					<div class="row">
-						<div class="col">
+						<div class="col-sm col-6">
 							<div class="destacado-card">
 								<img class="img-fluid" src="assets/images/autos/usados_front/1.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
@@ -340,7 +340,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-sm col-6">
 							<div class="destacado-card">
 								<img class="img-fluid" src="assets/images/autos/usados_front/2.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
@@ -360,7 +360,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-sm col-6">
 							<div class="destacado-card">
 								<img class="img-fluid" src="assets/images/autos/usados_front/3.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
@@ -380,7 +380,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-sm col-6">
 							<div class="destacado-card">
 								<img class="img-fluid" src="assets/images/autos/usados_front/4.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
@@ -400,7 +400,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-sm col-6">
 							<div class="destacado-card">
 								<img class="img-fluid" src="assets/images/autos/usados_front/5.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
@@ -425,7 +425,7 @@
 
 				<div class="carousel-item destacados-single">
 					<div class="row">
-						<div class="col">
+						<div class="col-sm col-6">
 							<div class="destacado-card">
 								<img class="img-fluid" src="assets/images/autos/usados_front/6.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
@@ -445,7 +445,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-sm col-6">
 							<div class="destacado-card">
 								<img class="img-fluid" src="assets/images/autos/usados_front/7.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
@@ -465,7 +465,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-sm col-6">
 							<div class="destacado-card">
 								<img class="img-fluid" src="assets/images/autos/usados_front/8.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
@@ -485,7 +485,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-sm col-6">
 							<div class="destacado-card">
 								<img class="img-fluid" src="assets/images/autos/usados_front/9.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
@@ -505,7 +505,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-sm col-6">
 							<div class="destacado-card">
 								<img class="img-fluid" src="assets/images/autos/usados_front/10.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
@@ -536,7 +536,7 @@
 
 	<footer>
 		<div class="row">
-			<div class="col">
+			<div class="col columna-footer-1">
 				<h5>Suscribete vía Email</h5>
 				<p>Copyright 2018 VALENZUELA & DELARZE. Todos los Derechos Reservados. Los precios de venta y equipamientos publicitados en este sitio web son referenciales y están sujetos a confirmación. Cuando por error de publicación estos no sean los del Mercado, el Cliente deberá ratificarlos en la Empresa. Valenzuela & Delarze se reserva el derecho a modificar, valores, cuotas y especificaciones ténicas sin previo aviso. Ver Políticas de Privacidad</p>
 				<form action="AQUI VA EL ARCHIVO PHP PARA ENVIAR">
@@ -544,7 +544,7 @@
 					<input type="submit" value="Suscribir" class="email-enviar">
 				</form>
 			</div>
-			<div class="col">
+			<div class="col columna-footer-2">
 				<div class="row footer-links">
 					<div class="col">
 						<h6>
