--- a/sucursales.html
+++ b/sucursales.html
@@ -349,7 +349,7 @@
 	</div>
 	<footer>
 		<div class="row">
-			<div class="col">
+			<div class="col columna-footer-1">
 				<h5>Suscribete vía Email</h5>
 				<p>Copyright 2018 VALENZUELA & DELARZE. Todos los Derechos Reservados. Los precios de venta y equipamientos publicitados en este sitio web son referenciales y están sujetos a confirmación. Cuando por error de publicación estos no sean los del Mercado, el Cliente deberá ratificarlos en la Empresa. Valenzuela & Delarze se reserva el derecho a modificar, valores, cuotas y especificaciones ténicas sin previo aviso. Ver Políticas de Privacidad</p>
 				<form action="AQUI VA EL ARCHIVO PHP PARA ENVIAR">
@@ -357,16 +357,16 @@
 					<input type="submit" value="Suscribir" class="email-enviar">
 				</form>
 			</div>
-			<div class="col">
+			<div class="col columna-footer-2">
 				<div class="row footer-links">
 					<div class="col">
 						<h6>
-							<a class="btn-abrir" id="btn-abrir" href="#">
+							<a class="btn-abrir" href="#">
 								Número de teléfono
 							</a> 
 						</h6>
 						<h6>
-							<a class="btn-abrir" id="btn-abrir" href="#">
+							<a class="btn-abrir" href="#">
 								Email
 							</a> 
 						</h6>
