--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
 
 	<footer>
 		<div class="row">
-			<div class="col columna-footer-1">
+			<div class="col-sm columna-footer-1">
 				<h5>Suscribete vía Email</h5>
 				<p>Copyright 2018 VALENZUELA & DELARZE. Todos los Derechos Reservados. Los precios de venta y equipamientos publicitados en este sitio web son referenciales y están sujetos a confirmación. Cuando por error de publicación estos no sean los del Mercado, el Cliente deberá ratificarlos en la Empresa. Valenzuela & Delarze se reserva el derecho a modificar, valores, cuotas y especificaciones ténicas sin previo aviso. Ver Políticas de Privacidad</p>
 				<form action="AQUI VA EL ARCHIVO PHP PARA ENVIAR">
@@ -544,7 +544,7 @@
 					<input type="submit" value="Suscribir" class="email-enviar">
 				</form>
 			</div>
-			<div class="col columna-footer-2">
+			<div class="col-sm columna-footer-2">
 				<div class="row footer-links">
 					<div class="col">
 						<h6>
@@ -564,7 +564,7 @@
 							<a href="#">Post Venta</a> 
 						</button>
 					</div>
-					<div class="col">
+					<div class="col-sm ">
 						<h6>
 							<a href="#">Contáctanos</a> 
 						</h6>
@@ -610,7 +610,6 @@
 	<div class="container-fluid copyright">
 		<p>Copyright <a href="">Muelle Digital</a></p> 
 	</div>
-
 
 	
 	<script src="assets/js/lib/jquery-3.3.1.js"></script>
