--- a/nuevos.html
+++ b/nuevos.html
@@ -100,7 +100,7 @@
 				        		</li>
 				        		<li>
 				        			<a data-toggle="tab" href="#menu1">
-				        		 		<h4>Agendar Servicio Técnico</h4>
+				        		 		<h4>Agendar</h4>
 				        			</a>
 				        		</li>
 		      				</ul>
