--- a/nuevos.html
+++ b/nuevos.html
@@ -337,8 +337,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="col">
-							<div class="destacado-card">
+						<div class="col margin-ultimo-col">
+							<div class="destacado-card extencion-ultimo-col">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/5.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
@@ -442,8 +442,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="col">
-							<div class="destacado-card">
+						<div class="col margin-ultimo-col">
+							<div class="destacado-card extencion-ultimo-col">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/10.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
@@ -569,8 +569,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="col">
-							<div class="destacado-card">
+						<div class="col margin-ultimo-col">
+							<div class="destacado-card extencion-ultimo-col">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/15.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
@@ -674,8 +674,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="col">
-							<div class="destacado-card">
+						<div class="col margin-ultimo-col">
+							<div class="destacado-card extencion-ultimo-col">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/20.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
@@ -801,8 +801,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="col">
-							<div class="destacado-card">
+						<div class="col margin-ultimo-col">
+							<div class="destacado-card extencion-ultimo-col">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/25.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
