--- a/usados.html
+++ b/usados.html
@@ -337,8 +337,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="col">
-							<div class="destacado-card">
+						<div class="col margin-ultimo-col">
+							<div class="destacado-card extencion-ultimo-col">
 								<img class="img-fluid" src="assets/images/autos/usados_front/5.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
@@ -442,8 +442,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="col">
-							<div class="destacado-card">
+						<div class="col margin-ultimo-col">
+							<div class="destacado-card extencion-ultimo-col">
 								<img class="img-fluid" src="assets/images/autos/usados_front/10.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
@@ -569,8 +569,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="col">
-							<div class="destacado-card">
+						<div class="col margin-ultimo-col">
+							<div class="destacado-card extencion-ultimo-col">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/30.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
@@ -674,8 +674,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="col">
-							<div class="destacado-card">
+						<div class="col margin-ultimo-col">
+							<div class="destacado-card extencion-ultimo-col">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/35.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
@@ -801,8 +801,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="col">
-							<div class="destacado-card">
+						<div class="col margin-ultimo-col">
+							<div class="destacado-card extencion-ultimo-col">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/40.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
@@ -906,8 +906,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="col">
-							<div class="destacado-card">
+						<div class="col margin-ultimo-col">
+							<div class="destacado-card extencion-ultimo-col">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/45.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
@@ -934,78 +934,6 @@
 	</div>
 <!-- FIN SUV  -->
 
-	<footer>
-		<div class="row">
-			<div class="col columna-footer-1">
-				<h5>Suscribete vía Email</h5>
-				<p>Copyright 2018 VALENZUELA & DELARZE. Todos los Derechos Reservados. Los precios de venta y equipamientos publicitados en este sitio web son referenciales y están sujetos a confirmación. Cuando por error de publicación estos no sean los del Mercado, el Cliente deberá ratificarlos en la Empresa. Valenzuela & Delarze se reserva el derecho a modificar, valores, cuotas y especificaciones ténicas sin previo aviso. Ver Políticas de Privacidad</p>
-				<form action="AQUI VA EL ARCHIVO PHP PARA ENVIAR">
-					<input type="email" name="emailaddress" class="email-sub" value=" Email">
-					<input type="submit" value="Suscribir" class="email-enviar">
-				</form>
-			</div>
-			<div class="col columna-footer-2">
-				<div class="row footer-links">
-					<div class="col">
-						<h6>
-							<a class="btn-abrir" href="#">
-								Número de teléfono
-							</a> 
-						</h6>
-						<h6>
-							<a class="btn-abrir" href="#">
-								Email
-							</a> 
-						</h6>
-						<h6>
-							<a href="#">Sucursales</a> 
-						</h6>
-						<button type="button" class="btn-postventa">
-							<a href="#">Post Venta</a> 
-						</button>
-					</div>
-					<div class="col">
-						<h6>
-							<a href="#">Contáctanos</a> 
-						</h6>
-						<h6>
-							<a href="#">Nuevos</a>
-						</h6>
-						<h6>
-							<a href="#">Usados</a>
-						</h6>
-					</div>
-					<div class="col">
-						<h6>
-							<a href="#">Noticias</a>
-						</h6>
-						<h6>
-							<a href="#">Términos y Condiciones</a>
-						</h6>
-						<div class="rrss">
-							<a href="https://www.facebook.com/valenzueladelarze">
-								<i class="fab fa-facebook-f"></i>
-							</a>
-							<a href="https://www.youtube.com/channel/UCEDXGQZq6-4l8gtuYU4X9Ig/feed" >
-								<i class="fab fa-youtube"></i>
-							</a>
-						</div>	
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<!-- contenedor pop up -->
-		<div class="overlay">
-			<div class="popup">
-				<a href="#">
-					<i class="fas fa-times btn-cerrar-popup"></i>
-				</a>
-				<h3>Número de telefono</h3>
-				<h3>Email</h3>
-			</div>
-		</div>
-		<!-- fin contenedor pop up  -->
 	<footer>
 		<div class="row">
 			<div class="col-sm columna-footer-1">
