--- a/sucursales.html
+++ b/sucursales.html
@@ -82,8 +82,12 @@
 		<section class="sucursales-general">
 			<h1>HONDA</h1>
 			<div class="row">
+
+				
 				<div class="col-md-3 sucursal-card">
-					<div class="sucursal-card-img padre-hurtado"></div>
+					<a href="https://goo.gl/maps/uavTagCCwrB2s">
+						<div class="sucursal-card-img padre-hurtado"></div>
+					</a>
 					<div class="sucursal-card-title">
 						<h6>
 							<b>PADRE HURTADO NORTE 1580 Vitacura - Santiago</b>
@@ -103,7 +107,9 @@
 				</div>
 
 				<div class="col-md-3 sucursal-card">
-					<div class="sucursal-card-img vitacura"></div>
+					<a href="https://goo.gl/maps/r3HhqFHrKJt">
+						<div class="sucursal-card-img vitacura"></div>
+					</a>
 					<div class="sucursal-card-title">
 						<h6>
 							<b>VITACURA <br> Av. Vitacura 3506, Vitacura </b>
@@ -119,8 +125,11 @@
 					</div>
 				</div>
 
+
 				<div class="col-md-3 sucursal-card">
-					<div class="sucursal-card-img manuel-montt"></div>
+					<a href="https://goo.gl/maps/xXPRJvKJyjx">
+						<div class="sucursal-card-img manuel-montt"></div>
+					</a>
 					<div class="sucursal-card-title">
 						<h6>
 							<b>MANUEL MONTT <br>
@@ -142,7 +151,9 @@
 				</div>
 
 				<div class="col-md-3 sucursal-card">
-					<div class="sucursal-card-img irarrazabal"></div>
+					<a href="https://goo.gl/maps/G5rP7HFFC6x">
+						<div class="sucursal-card-img irarrazabal"></div>
+					</a>
 					<div class="sucursal-card-title">
 						<h6>
 							<b>IRARRÁZABAL <br> 
@@ -168,7 +179,9 @@
 			<h1>Peugeot</h1>
 			<div class="row">
 				<div class="col-md-3 sucursal-card">
-					<div class="sucursal-card-img p-irarrazabal"></div>
+					<a href="https://goo.gl/maps/MKa9Y3MFKmu">
+						<div class="sucursal-card-img p-irarrazabal"></div>
+					</a>
 					<div class="sucursal-card-title">
 						<h6>
 							<b>IRARRAZABAL <br>
@@ -190,7 +203,9 @@
 				</div>
 
 				<div class="col-md-3 sucursal-card">
-					<div class="sucursal-card-img mall-plaza-egana"></div>
+					<a href="https://goo.gl/maps/q7XDWnd5ic22">
+						<div class="sucursal-card-img mall-plaza-egana"></div>
+					</a>
 					<div class="sucursal-card-title">
 						<h6>
 							<b>MALL PLAZA EGAÑA <br>
@@ -209,7 +224,9 @@
 				</div>
 
 				<div class="col-md-3 sucursal-card">
-					<div class="sucursal-card-img providencia"></div>
+					<a href="https://goo.gl/maps/h6Xt2Z2h8r22">
+						<div class="sucursal-card-img providencia"></div>
+					</a>
 					<div class="sucursal-card-title">
 						<h6>
 							<b>PROVIDENCIA <br> 
@@ -235,7 +252,9 @@
 			<h1>JEEP - DODGE - FIAT - FORD</h1>
 			<div class="row">
 				<div class="col-md-3 sucursal-card">
-					<div class="sucursal-card-img sk-bellavista"></div>
+					<a href="https://goo.gl/maps/zMWPYB7HB2Q2">
+						<div class="sucursal-card-img sk-bellavista"></div>
+					</a>
 					<div class="sucursal-card-title">
 						<h6>
 							<b>SK - BELLAVISTA <br>
@@ -257,7 +276,9 @@
 				</div>
 
 				<div class="col-md-3 sucursal-card">
-					<div class="sucursal-card-img ford-bellavista"></div>
+					<a href="https://goo.gl/maps/zMWPYB7HB2Q2">
+						<div class="sucursal-card-img ford-bellavista"></div>
+					</a>
 					<div class="sucursal-card-title">
 						<h6>
 							<b>FORD - BELLAVISTA <br>
@@ -287,7 +308,9 @@
 			<h1>USADOS</h1>
 			<div class="row">
 				<div class="col-md-3 sucursal-card">
-					<div class="sucursal-card-img usados-vitacura"></div>
+					<a href="https://goo.gl/maps/sLMgLKGgjMN2">
+						<div class="sucursal-card-img usados-vitacura"></div>
+					</a>
 					<div class="sucursal-card-title">
 						<h6>
 							<b>VITACURA PREMIUM <br>
@@ -305,7 +328,9 @@
 				</div>
 
 				<div class="col-md-3 sucursal-card">
-					<div class="sucursal-card-img usados-bilbao"></div>
+					<a href="https://goo.gl/maps/8TP2oTaMqaA2">
+						<div class="sucursal-card-img usados-bilbao"></div>
+					</a>
 					<div class="sucursal-card-title">
 						<h6>
 							<b>FRANCISCO BILBAO <br>
@@ -324,7 +349,9 @@
 				</div>
 
 				<div class="col sucursal-card">
-					<div class="sucursal-card-img autoshoping"></div>
+					<a href="https://goo.gl/maps/9q6is4Enso22">
+						<div class="sucursal-card-img autoshoping"></div>
+					</a>
 					<div class="sucursal-card-title">
 						<h6>
 							<b>AUTOSHOPPING <br>
