--- a/sucursales.html
+++ b/sucursales.html
@@ -86,14 +86,14 @@
 				
 				<div class="col-md-3 sucursal-card">
 					<a href="https://goo.gl/maps/uavTagCCwrB2s">
-						<div class="sucursal-card-img padre-hurtado"></div>
+						<div class="sucursal-card-img padre-hurtado cuadros"></div>
 					</a>
-					<div class="sucursal-card-title">
+					<div class="sucursal-card-title cuadros">
 						<h6>
 							<b>PADRE HURTADO NORTE 1580 Vitacura - Santiago</b>
 						</h6>
 					</div>
-					<div class="sucursal-card-detail">
+					<div class="sucursal-card-detail cuadro-bajo">
 						<p>
 							<b>VENTAS</b> <br>
 							Lunes a Viernes de 09:00 a 19:00 hrs.  | Sábado de 10:00 a 14:00 hrs.
@@ -108,14 +108,14 @@
 
 				<div class="col-md-3 sucursal-card">
 					<a href="https://goo.gl/maps/r3HhqFHrKJt">
-						<div class="sucursal-card-img vitacura"></div>
+						<div class="sucursal-card-img vitacura cuadros"></div>
 					</a>
-					<div class="sucursal-card-title">
+					<div class="sucursal-card-title cuadros">
 						<h6>
 							<b>VITACURA <br> Av. Vitacura 3506, Vitacura </b>
 						</h6>
 					</div>
-					<div class="sucursal-card-detail">
+					<div class="sucursal-card-detail cuadro-bajo">
 						<p>
 							<b>VENTAS</b> <br>
 							Lunes a Viernes de 09:00 a 19:00 hrs.  | Sábado de 10:00 a 14:00 hrs.
@@ -128,16 +128,16 @@
 
 				<div class="col-md-3 sucursal-card">
 					<a href="https://goo.gl/maps/xXPRJvKJyjx">
-						<div class="sucursal-card-img manuel-montt"></div>
+						<div class="sucursal-card-img manuel-montt cuadros"></div>
 					</a>
-					<div class="sucursal-card-title">
+					<div class="sucursal-card-title cuadros">
 						<h6>
 							<b>MANUEL MONTT <br>
 								Manuel Montt 1283, Providencia
 							</b>
 						</h6>
 					</div>
-					<div class="sucursal-card-detail">
+					<div class="sucursal-card-detail cuadro-bajo">
 						<p>
 							<b>VENTAS</b> <br>
 							Lunes a Viernes de 09:00 a 19:00 hrs. | Sábado de 10:00 a 14:00 hrs.
@@ -152,16 +152,16 @@
 
 				<div class="col-md-3 sucursal-card">
 					<a href="https://goo.gl/maps/G5rP7HFFC6x">
-						<div class="sucursal-card-img irarrazabal"></div>
+						<div class="sucursal-card-img irarrazabal cuadros"></div>
 					</a>
-					<div class="sucursal-card-title">
+					<div class="sucursal-card-title cuadros">
 						<h6>
 							<b>IRARRÁZABAL <br> 
 								Irarrázaval 370, Ñuñoa
 							</b>
 						</h6>
 					</div>
-					<div class="sucursal-card-detail">
+					<div class="sucursal-card-detail cuadro-bajo">
 						<p>
 							<b>VENTAS</b> <br>
 							Lunes a Viernes de 09:00 a 19:00 hrs. | Sábado de 10:00 a 14:00 hrs
@@ -180,16 +180,16 @@
 			<div class="row">
 				<div class="col-md-3 sucursal-card">
 					<a href="https://goo.gl/maps/MKa9Y3MFKmu">
-						<div class="sucursal-card-img p-irarrazabal"></div>
+						<div class="sucursal-card-img p-irarrazabal cuadros"></div>
 					</a>
-					<div class="sucursal-card-title">
+					<div class="sucursal-card-title cuadros">
 						<h6>
 							<b>IRARRAZABAL <br>
 								Avenida Irarrázaval 390,Ñuñoa
 							</b>
 						</h6>
 					</div>
-					<div class="sucursal-card-detail">
+					<div class="sucursal-card-detail cuadro-bajo">
 						<p>
 							<b>VENTAS</b> <br>
 							Lunes a Viernes de 09:00 a 19:00 hrs. | Sábado de 10:00 a 14:00 hrs.
@@ -204,16 +204,16 @@
 
 				<div class="col-md-3 sucursal-card">
 					<a href="https://goo.gl/maps/q7XDWnd5ic22">
-						<div class="sucursal-card-img mall-plaza-egana"></div>
+						<div class="sucursal-card-img mall-plaza-egana cuadros"></div>
 					</a>
-					<div class="sucursal-card-title">
+					<div class="sucursal-card-title cuadros">
 						<h6>
 							<b>MALL PLAZA EGAÑA <br>
 								Avenida Larraín 5862, La Reina
 							</b>
 						</h6>
 					</div>
-					<div class="sucursal-card-detail">
+					<div class="sucursal-card-detail cuadro-bajo">
 						<p>
 							<b>VENTAS</b> <br>
 							Lunes a Viernes de 09:00 a 19:00 hrs. | Sábado de 10:00 a 14:00 hrs.
@@ -225,16 +225,16 @@
 
 				<div class="col-md-3 sucursal-card">
 					<a href="https://goo.gl/maps/h6Xt2Z2h8r22">
-						<div class="sucursal-card-img providencia"></div>
+						<div class="sucursal-card-img providencia cuadros"></div>
 					</a>
-					<div class="sucursal-card-title">
+					<div class="sucursal-card-title cuadros">
 						<h6>
 							<b>PROVIDENCIA <br> 
 								Francisco Bilbao 1415
 							</b>
 						</h6>
 					</div>
-					<div class="sucursal-card-detail">
+					<div class="sucursal-card-detail cuadro-bajo">
 						<p>
 							<b>VENTAS</b> <br>
 							Lunes a Viernes de 09:00 a 19:00 hrs. | Sábado de 10:00 a 14:00 hrs.
@@ -253,16 +253,16 @@
 			<div class="row">
 				<div class="col-md-3 sucursal-card">
 					<a href="https://goo.gl/maps/zMWPYB7HB2Q2">
-						<div class="sucursal-card-img sk-bellavista"></div>
+						<div class="sucursal-card-img sk-bellavista cuadros"></div>
 					</a>
-					<div class="sucursal-card-title">
+					<div class="sucursal-card-title cuadros">
 						<h6>
 							<b>SK - BELLAVISTA <br>
 								Bellavista 0170, Providencia
 							</b>
 						</h6>
 					</div>
-					<div class="sucursal-card-detail">
+					<div class="sucursal-card-detail cuadro-bajo">
 						<p>
 							<b>VENTAS</b> <br>
 							Lunes a Viernes de 09:00 a 19:00 hrs. | Sábado de 10:00 a 14:00 hrs.
@@ -277,16 +277,16 @@
 
 				<div class="col-md-3 sucursal-card">
 					<a href="https://goo.gl/maps/zMWPYB7HB2Q2">
-						<div class="sucursal-card-img ford-bellavista"></div>
+						<div class="sucursal-card-img ford-bellavista cuadros"></div>
 					</a>
-					<div class="sucursal-card-title">
+					<div class="sucursal-card-title cuadros">
 						<h6>
 							<b>FORD - BELLAVISTA <br>
 							   Bellavista 0170
 							</b>
 						</h6>
 					</div>
-					<div class="sucursal-card-detail">
+					<div class="sucursal-card-detail cuadro-bajo">
 						<p>
 							<b>VENTAS</b> <br>
 							Lunes a Viernes de 09:00 a 19:00 hrs.  | Sábado de 10:00 a 14:00 hrs.
@@ -309,15 +309,15 @@
 			<div class="row">
 				<div class="col-md-3 sucursal-card">
 					<a href="https://goo.gl/maps/sLMgLKGgjMN2">
-						<div class="sucursal-card-img usados-vitacura"></div>
+						<div class="sucursal-card-img usados-vitacura cuadros"></div>
 					</a>
-					<div class="sucursal-card-title">
+					<div class="sucursal-card-title cuadros">
 						<h6>
 							<b>VITACURA PREMIUM <br>
 							Avenida Vitacura # 7690</b>
 						</h6>
 					</div>
-					<div class="sucursal-card-detail">
+					<div class="sucursal-card-detail cuadro-bajo">
 						<p>
 							<b>VENTAS</b> <br>
 							Lunes a Viernes de 09:00 a 19:00 hrs. | Sábado de 10:00 a 14:00 hrs.
@@ -329,16 +329,16 @@
 
 				<div class="col-md-3 sucursal-card">
 					<a href="https://goo.gl/maps/8TP2oTaMqaA2">
-						<div class="sucursal-card-img usados-bilbao"></div>
+						<div class="sucursal-card-img usados-bilbao cuadros"></div>
 					</a>
-					<div class="sucursal-card-title">
+					<div class="sucursal-card-title cuadros">
 						<h6>
 							<b>FRANCISCO BILBAO <br>
 							   Avenida Francisco Bilbao #1275
 							</b>
 						</h6>
 					</div>
-					<div class="sucursal-card-detail">
+					<div class="sucursal-card-detail cuadro-bajo">
 						<p>
 							<b>VENTAS</b> <br>
 							Lunes a Viernes de 09:00 a 19:00 hrs. | Sábado de 10:00 a 14:00 hrs.
@@ -350,9 +350,9 @@
 
 				<div class="col sucursal-card">
 					<a href="https://goo.gl/maps/9q6is4Enso22">
-						<div class="sucursal-card-img autoshoping"></div>
+						<div class="sucursal-card-img autoshoping cuadros"></div>
 					</a>
-					<div class="sucursal-card-title">
+					<div class="sucursal-card-title cuadros">
 						<h6>
 							<b>AUTOSHOPPING <br>
 							   Departamental 4500 
@@ -360,7 +360,7 @@
 							</b>
 						</h6>
 					</div>
-					<div class="sucursal-card-detail">
+					<div class="sucursal-card-detail cuadro-bajo">
 						<p>
 							<b>VENTAS</b> <br>
 							Lunes a Domingo de 10:00 a 20:00 hrs.
